@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `buildingplan`: improved performance in forts with large numbers of items
 
 ## Misc Improvements
 
